@startuml
'https://plantuml.com/class-diagram

class Cliente{
--Atributos--
-numCliente:Int
-dni:String
-nombre:String
-apellido1:String
-apellido2:String
-cuentas: List<CuentaBancaria>
--Metodos--
+constructor()
+constructor(dni,nombre,apellido1,apellido2)

+getNumCliente():Int

+getDni():String
+setDni(dni)

+getNombre():String
+setNombre(nombre)

+getApellido1():String
+setApellido1(apellido)

+getApellido2():String
+setApellido2(apellido)

+getTodasCuentas():List<CuentaBancaria>

+getCuentasCorrientes():List<CuentaCorriente>
+setCuentaCorriente(CuentaCorriente)

+getCuentaAhorro():List<CuentaAhorro>
+setCuentaAhorro(CuentaAhorro)

+override toString:String
}
abstract CuentaBancaria{
--Atributos--
-dataApertura:Fecha
-saldo:Float
-codigoBanco:String
-codigoSucursal:String
-digitosDeControl:String
-nombreCuenta:String
--Metodos--
-setNombreCuenta():String
+consultarSaldo()
abstract ingresar(dinero)
abstract retirar(dinero)
abstract cobrarComision(tipo)
+override toString:String
}

class CuentaCorriente{
--Atributos--
-comisionMantenimiento:Int
-override liquidada:Boolean
-override dataLiquidacion:Fecha
--Metodos--
+constructor()

+getComisionMantenimiento():Int
+setComisionMantenimiento(comision)

+getLiquidada():Boolean
+setLiquidada(liquidada:Boolean)

+override ingresar(dinero)
+override retirar(dinero)

+override cobrarComision(tipo)

+override liquidar()

+override toString:String
}

class CuentaAhorro{
--Atributos--
-interes:Float
-override (liquidada:Boolean)
-override dataLiquidacion:Fecha
--Metodos--
+constructor()

+getInteres():Float
+setInteres(interes)

+getLiquidada():Boolean
+setLiquidada(liquidada:Boolean)

+generarInteres()

+override ingresar(dinero)
+override retirar(dinero)

+override cobrarComision(tipo)

+override liquidar()

+overide toString:String
}

interface Liquidable {
--Atributos--
abstract liquidada:Boolean
abstract dataLiquidacion:Fecha
--Metodos--
abstract liquidar()
}

class Fecha {
--Atributos--
-dia:Int
-mes:Int
-anyo:Int
--Metodos--
+getDia():Int
+setDia(dia):Int
+getMes():Int
+setMes(mes)
+getAnyo():Int
+setAnyo(anyo)
}


CuentaBancaria <|-- CuentaAhorro
CuentaBancaria <|-- CuentaCorriente

Liquidable <|.. CuentaAhorro
Liquidable <|.. CuentaCorriente

Cliente *-- CuentaBancaria





@enduml